src/components/VideoModal/styles.module.scss
@import "../../styles/Variables.module.scss";
@import "../../styles/Mixins.module.scss";
@import "../../styles/Typography.module.scss";

.title {
  font-weight: 500;
  font-family: $sans;

  @include font-size($text-large);
}

.modalStyles {
  background-color: $white;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 280px;
  height: 330px;
  box-shadow: 0 1px 40px 0 rgba(50, 47, 68, 0.2);
  padding: 1.5em;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  z-index: 4;
  @include mq("tablet") {
    width: 500px;
    height: 500px;
  }
}

.link {
  color: #396abf !important;
  cursor: pointer;
  font-weight: 600 !important;
  font-family: $sans !important;
}

.buttonContainer {
  display: flex;
  justify-content: flex-end;
  width: 100%;
  height: 60px;
}

.closeButton {
  background-color: transparent;
  border: 0;
}

